[package]
name = "pingdown"
version = "1.4.4"
authors = ["Chris233 h-chris233@outlook.com"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/H-Chris233/pingdown/"
default-run = "pingdown"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
